--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
+
+ .div1 {
+    width: 100px;
+    height: 100px;
+    border: 3px solid black;
+    box-sizing: border-box;
+}
