--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+
+<div class="text-center">
+  <h2>Blocipedia: Social, Markdown Wikis</h2>
+</div>
+<br>
+<div class="vertical-center">
+  <div class="col-md-8 col-md-offset-2">
+    <div class="jumbotron text-center">
+      <h3>Create and share Markdown Wikis</h3>
+      <br>
+      <div class='btn btn-primary'>
+        Sign up
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6 text-center">
+    <h4>Create as many public wikis as you want!</h4>
+    <br>
+    <div class="div1 center-block">
+    </div>
+    <h3>Free Plan</h3>
+  </div>
+  <div class="col-md-6 text-center">
+    <h4>Create private wikis!</h4>
+    <br>
+    <div class="div1 center-block">
+    </div>
+    <h3>Premium Plan</h3>
+  </div>
+</div>
