--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 <body>
   <div class="container">
     <ul class="nav nav-tabs">
+      <%= link_to "Wikis", wikis_path %>
       <div class="pull-right user-info">
         <% if user_signed_in? %>
            Signed in as: <strong><%= current_user.email %></strong> |
@@ -17,7 +18,8 @@
          <% else %>
            <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
            <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
-         <% end %>      </div>
+         <% end %>
+       </div>
     </ul>
 
     <% if flash[:notice] %>
