--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 <body>
   <div class="container">
     <ul class="nav nav-tabs">
+      <%= link_to "Home", root_path %>
+      |
       <%= link_to "Wikis", wikis_path %>
       <div class="pull-right user-info">
         <% if user_signed_in? %>
