Add authorization and downgrades to private wiki

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,4 +1,9 @@
-<h1><%= @wiki.title %></h1>
+<h1>
+  <%= @wiki.title %>
+  <% if @wiki.private? %>
+    <small><span class="glyphicon glyphicon-lock"></span></small>
+  <% end %>
+</h1>
 
 <div class='row'>
   <div class='col-md-8'>
