--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -5,7 +5,7 @@
 <% if current_user.standard? %>
   <%= link_to "Upgrade to Premium", charges_new_path %><br />
 <% elsif current_user.premium? %>
-  <%= link_to "Downgrade to Standard", users_downgrade_path %><br />
+  <%= link_to "Downgrade to Standard", users_downgrade_path, data: {confirm: 'Are you sure you? All your private wikis will become public.'} %><br />
 <% end %>
 
 <hr>
