--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -10,13 +10,22 @@
         <div class="media-body">
           <tbody>
             <% @wikis.each do |wiki| %>
-              <tr>
-                <h4 class="media-heading">
-                  <td><%= link_to wiki.title, wiki %></td>
-                </h4>
+              <% if (!wiki.private?) || (wiki.private? && (current_user == wiki.user)) || (wiki.private? && (current_user.admin?))%>
+                <tr>
+                  <h4 class="media-heading">
+                    <td><%= link_to wiki.title, wiki %></td>
+                  </h4>
+
+                  <td>
+                    <% if wiki.private? %>
+                      <span class="glyphicon glyphicon-lock"></span>
+                    <% end %>
+                  </td>
+
                   <td><%= link_to "Edit", edit_wiki_path(wiki.id), class: 'btn btn-success' %></td>
                   <td><%= link_to "Delete", wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure?'} %></td>
-              </tr>
+                </tr>
+              <% end %>
             <% end %>
           </tbody>
         </div>
