--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Wikis controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.preview_box {
+   width: 555px;
+   height: 174px;
+   box-sizing: border-box;
+   border: 1px solid lightgray;
+}
+
+.preview_align {
+   width: 555px;
+   height: 130px;
+   box-sizing: border-box;
+}
