Help with update collaborators

--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -23,13 +23,5 @@
         });
       <% end %>
     </div>
+  </div>
 </div>
-
-
-<%#
-
-var converter = new showdown.Converter(),
-text      = document.getElementById("wiki_body").value,
-html      = converter.makeHtml(text);
-document.write(html);
-%>
