--- a/app/views/wikis/_show_collaborators.html.erb
+++ b/app/views/wikis/_show_collaborators.html.erb
@@ -1,3 +1,7 @@
+<h4 class="text-center">
+  Add Collaborators to the <%= @wiki.title %> Wiki (showing all users)
+</h4>
+
 <div class="container">
   <div class='row col-md-6 col-md-offset-3'>
 
@@ -19,11 +23,14 @@
                 </td>
                 <td>
                   <div class="media-body text-center">
-                    <%#= check_box_tag "wiki[user_ids][]", user.id, @wiki.user_ids.include?(user.id) %>
-                    <% if @wiki.user_ids.include?(user.id) %>
-                      <span class="glyphicon glyphicon-check"></span>
+                    <% if @wiki.users.include?(user) %>
+                      <%=link_to wiki_toggle_collaborator_path(@wiki, :col => user), method: :put, remote: true do %>
+                        <span class="glyphicon glyphicon-check"></span>
+                      <% end %>
                     <% else %>
-                      <span class="glyphicon glyphicon-unchecked"></span>
+                      <%=link_to wiki_toggle_collaborator_path(@wiki, :col => user), method: :put, remote: true do %>
+                        <span class="glyphicon glyphicon-unchecked"></span>
+                      <% end %>
                     <% end %>
                   </div>
                 </td>
