Fix public wiki having collaborators

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -16,5 +16,7 @@
   </div>
 </div>
 
-<hr>
-<%= render partial: 'show_collaborators', locals: { wiki: @wiki } %>
+<% if current_user.admin? || current_user.premium? %>
+  <hr>
+  <%= render partial: 'show_collaborators', locals: { wiki: @wiki } %>
+<% end %>
